src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>ER_Asset_Status_Last_Modified_Date__c</fullName>
        <description>If the value of the status(from WS) is different from the value of Asset Status, we need to update the Asset Status and this field.</description>
        <label>Status Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ER_Asset_Type__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ER_Multicard</fullName>
                    <label>Multi-Wallet</label>
                </value>
                <value>
                    <fullName>ER_Mono-Wallet</fullName>
                    <label>Mono-Wallet</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Authorization_Account__c</fullName>
        <label>Authorization Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Block_Card_Reason__c</fullName>
        <label>Block Card Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Stolen</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Temporary Blocked</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Card_Activation_Date__c</fullName>
        <label>Card Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Card_Contact_Type__c</fullName>
        <label>Card Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact Only</fullName>
                </value>
                <value>
                    <fullName>Contactless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Card_Expiration_Date__c</fullName>
        <label>Card Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Card_Face_Value__c</fullName>
        <label>Card Face Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Card_Issue_Date__c</fullName>
        <label>Card Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Card_Network__c</fullName>
        <label>Card Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 coins</fullName>
                </value>
                <value>
                    <fullName>4 coins</fullName>
                </value>
                <value>
                    <fullName>hybrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Card_Operational_System_ID__c</fullName>
        <externalId>true</externalId>
        <label>Asset Holder Operational System ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Card_reloadable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Card Reloadable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_ClientText__c</fullName>
        <formula>ER_Employee__r.ER_ClientText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is used only if you don’t have OneForce Client solution otherwise use the account name lookup</inlineHelpText>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Client</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets (Client)</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Contactless_payment_enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contactless payment enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Edenred_Solution__c</fullName>
        <label>Edenred Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IGC_R</fullName>
                    <label>Incentive Card</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>ER_Employee__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_Extranet_portal_association_date__c</fullName>
        <label>Extranet portal association date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ER_Individual_Account_RT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ER_MobilePayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ER_Order_Delivery_Type__c</fullName>
        <label>Order Delivery Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Order_Label__c</fullName>
        <label>Order Label</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Product_Class__c</fullName>
        <formula>Product2.ER_EDG_Product_Ref__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Product_Picture__c</fullName>
        <formula>CASE(
Product2.ProductCode,

&quot;TSC_A&quot;,
IMAGE(&quot;/resource/SRER01_Images/TicketKadeos.png&quot;, &quot;Ticket Shopping Card Einweg&quot;,162, 261),

&quot;TSC_P&quot;,
IMAGE(&quot;/resource/SRER01_Images/TicketShopping.png&quot;, &quot;Ticket Shopping Card - personalisiert&quot;, 162, 261),

&quot;TSC_R&quot;,
IMAGE(&quot;/resource/SRER01_Images/TicketShopping.png&quot;, &quot;Ticket Shopping Card Wiederaufladbar&quot;, 162, 261),

&quot;IGC_R&quot;,
IMAGE(&quot;/resource/SRER01_Images/Incentive.png&quot;, &quot;Incentive Card&quot;, 162, 261),

&quot;TRC_R&quot;,
IMAGE(&quot;/resource/SRER01_Images/TicketResto.png&quot;, &quot;Ticket Restaurant&quot;, 162, 261),

&quot;ERCZ_TR_PERS_CZK&quot;,
IMAGE(&quot;/resource/SRER01_Images/karta_TRC_248x156px.png&quot;, &quot;Ticket Restaurant Card&quot;, 162, 261),

&quot;ERCZ_TB_PERS_CZK&quot;,
IMAGE(&quot;/resource/SRER01_Images/karta_EBC_248x156.png&quot;, &quot;Edenred Benefits Card&quot;, 162, 261),

&quot;ERSL_NEMO_ED_EMV_EUR&quot;,
IMAGE(&quot;/resource/SRER01_Images/TicketHolidayCard_SK.png&quot;, &quot;Holiday Card&quot;, 162, 261),

&quot;ERSL_NEMO_TR_EMV_EUR&quot;,
IMAGE(&quot;/resource/SRER01_Images/TicketRestaurantCard_SK.png&quot;, &quot;EMV Card&quot;, 162, 261),

&quot;ERSL_NEMO_TR_PER_EUR&quot;,
IMAGE(&quot;/resource/SRER01_Images/TicketRestaurantCard_SK.png&quot;, &quot;Card MgStripe&quot;, 162, 261),

IMAGE(&quot;/resource/SRER01_Images/TicketResto.png&quot;, &quot;Ticket Restaurant&quot;, 162, 261)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Serial_Number_Unique_ID__c</fullName>
        <label>Serial Number Unique ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IT_Circuit_Code__c</fullName>
        <label>Circuit Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Circuit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Circuit</label>
        <referenceTo>IT_Circuit__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IT_Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Status_Code__c</fullName>
        <label>Status Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <recordTypes>
        <fullName>ER_Anonymous_Card</fullName>
        <active>true</active>
        <label>Anonymous Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>ER_Asset_Record_Type</fullName>
        <active>true</active>
        <label>Asset</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VRER001_AssetlName_AccountLookup</fullName>
        <active>true</active>
        <description>User is not able to modify Business Account or Asset Number assigned to Asset.</description>
        <errorConditionFormula>AND(
            NOT($User.ER_BypassVR__c),
            OR( ISCHANGED( AccountId ),
                ISCHANGED( Name ) 
             ))</errorConditionFormula>
        <errorMessage>You are not able to modify</errorMessage>
    </validationRules>
</CustomObject>